# protomq

./: .gitignore  Dockerfile  FAQ.md  FEATURES.md  LICENSE  README.md  SECURITY.md  benchmarking.html  build.zig  build.zig.zon  docker-compose.yml  index.html  protomq.service
benchmarks/: README.md  RESULTS.md  mqtt_bench.py  pyproject.toml  verified_results.json
benchmarks/b1_baseline_concurrency/: README.md  benchmark.py  thresholds.json
benchmarks/b2_thundering_herd/: README.md  benchmark.py  thresholds.json
benchmarks/b3_sustained_throughput/: README.md  benchmark.py  thresholds.json
benchmarks/b4_wildcard_explosion/: README.md  benchmark.py  thresholds.json
benchmarks/b5_protobuf_load/: README.md  benchmark.py  thresholds.json
benchmarks/b6_connection_churn/: README.md  benchmark.py  thresholds.json
benchmarks/b7_message_sizes/: README.md  benchmark.py  thresholds.json
benchmarks/common/: pyproject.toml
benchmarks/common/protomq_benchmarks/: __init__.py  client.py  environment.py  metrics.py  runner.py  thresholds.py
benchmarks/results/darwin_25.2.0_m2pro_arm64/: 35aa2801_b1-baseline-concurrency.json  35aa2801_b2-thundering-herd.json  35aa2801_b3-sustained-throughput.json  35aa2801_b4-wildcard-explosion.json  35aa2801_b5-protobuf-load.json  35aa2801_b6-connection-churn.json  35aa2801_b7-message-sizes.json  latest-b1-baseline-concurrency.json  latest-b2-thundering-herd.json  latest-b3-sustained-throughput.json  latest-b4-wildcard-explosion.json  latest-b5-protobuf-load.json  latest-b6-connection-churn.json  latest-b7-message-sizes.json
(+50 files in other folders)
